Fixed issue with the horizontal scroll

--- a/webapp/app/styles/main.scss
+++ b/webapp/app/styles/main.scss
@@ -9,6 +9,11 @@ $icon-font-path: "/bower_components/sass-bootstrap/fonts/";
     padding: 0.2em 0;
 }
 
+.row {
+    margin-left: 0px;
+    margin-right: 0px;
+}
+
 /* Space out content a bit */
 body {
     padding-top: 20px;
